# physdes-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  GEMINI.md  IFLOW.md  LICENSE  LICENSE-MIT  README.bak  README.md  default.profdata  default.profraw  essay.md  interval_ai.rs  lcov.info  merge_obj_ai.rs  point_ai.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codecov.yml  grcov.yml  jekyll-gh-pages.yml  llvm-cov.yml  quickstart.yml  rust.yml  tarpaulin.yml.bak
.trunk/: actions  logs  notifications  out  trunk.yaml
.trunk/plugins/: trunk
benches/: eda_compare_bench.rs  geometry_bench.rs
examples/: gen_dme_svgs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: interval_ops.rs  point_ops.rs  polygon_ops.rs
src/: algorithms.rs  dllink.rs  dme_algorithm.rs  dme_visualizer.rs  doc-header.html  error.rs  generic.rs  global_router.rs  halton_int.rs  halton_int.trs  interval.rs  interval_ai.rs  lib.rs  logging.rs  main.rs  manhattan_arc.rs  merge_obj.rs  point.rs  polygon.rs  rdllist.rs  rect.trs  rect3.trs  rectangle.rs  rectangle.trs  rpolygon.rs  rpolygon_cut.rs  rpolygon_hull.rs  vector2.rs  vlsi_ops.rs
