[package]
name = "physdes-rs"
version = "0.1.3"
edition = "2021"
description = "Physical Design in Rust"
repository = "https://github.com/luk036/physdes-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "physdes"
path = "src/lib.rs"

[dependencies]
num = { version = "0.4.3" }
num-traits = { version = "0.2.19" }
intervallum = { version = "1.4.4" }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
# lds-rs = { path = "lds-rs" }

[features]
default = ["std"]
std = ["num-traits/std", "dep:env_logger", "dep:log"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1.1.0"
svgbobdoc = "0.3"
