[package]
name = "physdes-rs"
version = "0.1.6"
edition = "2021"
rust-version = "1.70"
description = "Physical Design in Rust"
repository = "https://github.com/luk036/physdes-rs"
license = "MIT OR Apache-2.0"
keywords = ["vlsi", "eda", "geometry", "physical-design", "polygon"]
categories = ["algorithms", "science", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "src/doc-header.html"]

[lib]
name = "physdes"
path = "src/lib.rs"

[dependencies]
num = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
intervallum = { version = "1.4.4", default-features = false }
env_logger = { version = "0.11.10", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["num-traits/std", "dep:env_logger", "dep:log"]
serialize = ["serde"]

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
svgbobdoc = "0.3"
criterion = "0.8.2"

[[bench]]
name = "geometry_bench"
harness = false

[[bench]]
name = "eda_compare_bench"
harness = false
